docs: write up for running the application